--- a/index.html
+++ b/index.html
@@ -1,38 +1,23 @@
 <!DOCTYPE html>
-<html lang="en-US">
-  <head>
-    <meta charset="utf-8">
-    <title>Number Guessing Game</title>
-    <style>
-      html {
-        font-family: sans-serif;
-      }
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Number Guess</title>
+  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Electrolize&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <h1 class=".heading">Number Guessing Game</h1>
 
-      body {
-        width: 50%;
-        max-width: 800px;
-        min-width: 480px;
-        margin: 0 auto;
-      }
-      
-      .form input[type="number"] {
-        width: 200px;
-      }
-
-      .lastResult {
-        color: white;
-        padding: 3px;
-      }
-    </style>
-  </head>
-
-  <body>
-    <h1>Number Guessing Game</h1>
-
-    <p>We have selected a random number between 1 and 100. See if you can guess it in 10 turns or fewer. We'll tell you if your guess was too high or too low.</p>
-
+  <div class="container">
+    <p>We have selected a random number between <span style="color: green;">1 and 100</span>. See if you can guess it in <span style="color: red;">10</span> turns or fewer. We'll tell you if your guess was too high or too low.</p>
+    
     <div class="form">
-      <label for="guessField">Enter a guess: </label>
+      <label for="guessField">Enter a guess</label>
       <input type="number" min="1" max="100" required id="guessField" class="guessField">
       <input type="submit" value="Submit guess" class="guessSubmit">
     </div>
@@ -42,92 +27,8 @@
       <p class="lastResult"></p>
       <p class="lowOrHi"></p>
     </div>
+  </div> 
 
-    <script>
-
-      // Your JavaScript goes here
-
-        let randomNumber = Math.floor(Math.random() * 100) + 1;
-
-        const guesses = document.querySelector(".guesses");
-        const lastResult = document.querySelector(".lastResult");
-        const lowOrHi = document.querySelector(".lowOrHi");
-
-        const guessSubmit = document.querySelector(".guessSubmit");
-        const guessField = document.querySelector(".guessField");
-
-        let guessCount = 1;
-        let resetButton;
-
-        guessField.focus();
-
-        function checkGuess() {
-            const userGuess = Number(guessField.value);
-            if (guessCount === 1) {
-                guesses.textContent = "Previous guesses:";
-            }
-            guesses.textContent = `${guesses.textContent} ${userGuess}`;
-
-            if (userGuess === randomNumber) {
-                lastResult.textContent = "Congratulations! You got it right!";
-                lastResult.style.backgroundColor = "green";
-                lowOrHi.textContent = "";
-                setGameOver();
-            } else if (guessCount === 10) {
-                lastResult.textContent = "!!!GAME OVER!!!";
-                lowOrHi.textContent = "";
-                setGameOver();
-            } else {
-                lastResult.textContent = "Wrong!";
-                lastResult.style.backgroundColor = "red";
-                if (userGuess < randomNumber) {
-                lowOrHi.textContent = "Last guess was too low!";
-                } else if (userGuess > randomNumber) {
-                lowOrHi.textContent = "Last guess was too high!";
-                }
-            }
-
-            guessCount++;
-            guessField.value = "";
-            guessField.focus();
-        }
-
-        guessSubmit.addEventListener("click", checkGuess);
-
-        function setGameOver() {
-            guessField.disabled = true;
-            guessSubmit.disabled = true;
-            resetButton = document.createElement("button");
-            resetButton.textContent = "Start new game";
-            document.body.append(resetButton);
-            resetButton.addEventListener("click", resetGame);
-        }
-
-        function resetGame() {
-            guessCount = 1;
-
-            const resetParas = document.querySelectorAll(".resultParas p");
-            for (const resetPara of resetParas) {
-                resetPara.textContent = "";
-            }
-
-            resetButton.parentNode.removeChild(resetButton);
-
-            guessField.disabled = false;
-            guessSubmit.disabled = false;
-            guessField.value = "";
-            guessField.focus();
-
-            lastResult.style.backgroundColor = "white";
-
-            randomNumber = Math.floor(Math.random() * 100) + 1;
-        }
-
-
-
-
-
-
-    </script>
-  </body>
+  <script src="main.js" ></script>  
+</body>
 </html>
