--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       <p class="guesses"></p>
       <p class="lastResult"></p>
       <p class="lowOrHi"></p>
+      <button class="btn">Start New Game</button>
     </div>
   </div> 
 
